--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "roots-orig"]
 	path = roots-orig
-	url = https://github.com/retlehs/roots.git
+	url = https://github.com/roots/roots.git
